<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity"
    android:padding="16dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_img_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@drawable/user1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_img_detail"
        android:text="@string/nameSet"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_username_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name_detail"
        android:text="@string/usernameSet"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tv_repository_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username_detail"
        android:layout_marginLeft="20dp"
        android:text="@string/repositorySet"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/tv_followers_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_repository_detail"
        android:layout_below="@id/tv_username_detail"
        android:text="@string/followersSet"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/tv_following_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_followers_detail"
        android:layout_below="@id/tv_username_detail"
        android:text="@string/followingSet"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/tv_company_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_following_detail"
        android:text="@string/companySet"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_location_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_company_detail"
        android:text="@string/locationSet"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>